--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -2,6 +2,7 @@
     "recommendations": [
         "dsznajder.es7-react-js-snippets",
         "rodrigovallades.es7-react-js-snippets",
-        "bradlc.vscode-tailwindcss"
+        "bradlc.vscode-tailwindcss",
+        "vscode-icons-team.vscode-icons"
     ]
 }
